--- a/.eslintrc
+++ b/.eslintrc
@@ -8,9 +8,10 @@
 	"extends": [
 		"plugin:@typescript-eslint/recommended",
 		"airbnb",
+		"airbnb-typescript",
 		"prettier",
 		"plugin:import/typescript",
-		"prettier/@typescript-eslint",
+		"plugin:prettier/recommended",
 		"react-app"
 	],
 	"globals": {
@@ -153,6 +154,7 @@
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"prettier/prettier": "error",
 		"import/no-cycle": "warn",
+		"import/no-named-as-default": "off",
 		"import/order": [
 			"error",
 			{
@@ -209,7 +211,17 @@
 			]
 		},
 		"import/resolver": {
-			"typescript": {}
+			"node": {
+				"paths": [
+					"src"
+				],
+				"extensions": [
+					".js",
+					".jsx",
+					".ts",
+					".tsx"
+				]
+			}
 		}
 	},
 	"overrides": [
