--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
 			"jsx": true
 		},
 		"ecmaVersion": 2020,
-		"sourceType": "module"
+		"sourceType": "module",
+		"project": "./tsconfig.json"
 	},
 	"plugins": [
 		"import",
