chore: change prettier bracket same line config
change jsxBracketSameLine deprecated field to bracketSameLine

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
 	"arrowParens": "avoid",
 	"bracketSpacing": true,
 	"jsxSingleQuote": false,
-	"jsxBracketSameLine": false,
+	"bracketSameLine": false,
 	"useTabs": true,
 	"trailingComma": "none",
 	"tabWidth": 2,
