--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
 		"@react-native-async-storage/async-storage": "~1.15.0",
 		"@react-navigation/native": "^6.0.6",
 		"@react-navigation/native-stack": "^6.2.5",
-		"@types/styled-components-react-native": "^5.1.2",
+		"axios": "^0.24.0",
 		"expo": "~43.0.0",
 		"expo-app-loading": "~1.2.1",
 		"expo-font": "~10.0.3",
+		"expo-location": "~13.0.4",
 		"expo-secure-store": "~11.0.3",
 		"expo-status-bar": "~1.1.0",
+		"lodash.debounce": "^4.0.8",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
 		"react-native": "0.64.2",
 		"react-native-app-intro-slider": "^4.0.4",
+		"react-native-maps": "0.28.0",
 		"react-native-paper": "^4.10.0",
 		"react-native-safe-area-context": "3.3.2",
 		"react-native-screens": "~3.8.0",
@@ -33,8 +36,11 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
+		"@types/axios": "^0.14.0",
+		"@types/lodash.debounce": "^4.0.6",
 		"@types/react": "~17.0.21",
 		"@types/react-native": "~0.64.12",
+		"@types/styled-components-react-native": "^5.1.2",
 		"@typescript-eslint/eslint-plugin": "^5.3.1",
 		"@typescript-eslint/parser": "^5.3.1",
 		"eslint": "^8.2.0",
