chore: :wrench: add conventional commits scopes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
 	"conventionalCommits.scopes": [
-		"eslint"
+		"eslint",
+		"typescript",
+		"styled-components",
+		"build",
+		"screens"
 	]
 }
