chore(eslint): :fire: remove unnecessary extensions error

--- a/.eslintrc
+++ b/.eslintrc
@@ -197,11 +197,7 @@
 				"js": "never",
 				"jsx": "never",
 				"ts": "never",
-				"tsx": "never",
-				"png": "never",
-				"svg": "never",
-				"jpg": "never",
-				"jpeg": "never"
+				"tsx": "never"
 			}
 		]
 	},
