--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react-dom": "17.0.1",
 		"react-native": "0.64.2",
 		"react-native-app-intro-slider": "^4.0.4",
+		"react-native-gesture-handler": "~1.10.2",
 		"react-native-maps": "0.28.0",
 		"react-native-paper": "^4.10.0",
 		"react-native-safe-area-context": "3.3.2",
