--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 		"ios": "expo start --ios",
 		"web": "expo start --web",
 		"eject": "expo eject",
-		"format": "prettier --write src/**",
-		"lint": "eslint --fix src/**"
+		"format": "prettier --write .",
+		"lint": "eslint --fix ."
 	},
 	"dependencies": {
 		"@expo-google-fonts/roboto": "^0.2.0",
