--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"lodash.debounce": "^4.0.8",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
-		"react-native": "0.64.2",
+		"react-hook-form": "^7.19.5",
+		"react-native": "0.64.3",
 		"react-native-app-intro-slider": "^4.0.4",
 		"react-native-gesture-handler": "~1.10.2",
 		"react-native-maps": "0.28.0",
