--- a/package.json
+++ b/package.json
@@ -12,36 +12,36 @@
 	"dependencies": {
 		"@expo-google-fonts/roboto": "^0.2.0",
 		"@expo-google-fonts/ubuntu": "^0.2.0",
-		"@react-native-async-storage/async-storage": "~1.15.0",
+		"@react-native-async-storage/async-storage": "~1.17.3",
 		"@react-navigation/native": "^6.0.6",
 		"@react-navigation/native-stack": "^6.2.5",
 		"axios": "^0.24.0",
-		"expo": "~43.0.0",
-		"expo-app-loading": "~1.2.1",
-		"expo-font": "~10.0.3",
-		"expo-location": "~13.0.4",
-		"expo-secure-store": "~11.0.3",
-		"expo-status-bar": "~1.1.0",
+		"expo": "^46.0.0",
+		"expo-app-loading": "~2.1.0",
+		"expo-font": "~10.2.0",
+		"expo-location": "~14.3.0",
+		"expo-secure-store": "~11.3.0",
+		"expo-status-bar": "~1.4.0",
 		"lodash.debounce": "^4.0.8",
-		"react": "17.0.1",
-		"react-dom": "17.0.1",
+		"react": "18.0.0",
+		"react-dom": "18.0.0",
 		"react-hook-form": "^7.19.5",
-		"react-native": "0.64.3",
+		"react-native": "0.69.6",
 		"react-native-app-intro-slider": "^4.0.4",
-		"react-native-gesture-handler": "~1.10.2",
-		"react-native-maps": "0.28.0",
+		"react-native-gesture-handler": "~2.5.0",
+		"react-native-maps": "0.31.1",
 		"react-native-paper": "^4.10.0",
-		"react-native-safe-area-context": "3.3.2",
-		"react-native-screens": "~3.8.0",
-		"react-native-web": "0.17.1",
+		"react-native-safe-area-context": "4.3.1",
+		"react-native-screens": "~3.15.0",
+		"react-native-web": "~0.18.7",
 		"styled-components": "^5.3.3"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.9",
+		"@babel/core": "^7.18.6",
 		"@types/axios": "^0.14.0",
 		"@types/lodash.debounce": "^4.0.6",
-		"@types/react": "~17.0.21",
-		"@types/react-native": "~0.64.12",
+		"@types/react": "~18.0.0",
+		"@types/react-native": "~0.69.1",
 		"@types/styled-components-react-native": "^5.1.2",
 		"@typescript-eslint/eslint-plugin": "^5.3.1",
 		"@typescript-eslint/parser": "^5.3.1",
@@ -58,7 +58,7 @@
 		"eslint-plugin-react": "^7.27.0",
 		"eslint-plugin-react-hooks": "^4.3.0",
 		"prettier": "^2.4.1",
-		"typescript": "~4.3.5"
+		"typescript": "^4.6.3"
 	},
 	"private": true
 }
